# imageboard

./: Cargo.toml  README.md  build.sh  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md
ft/: Cargo.toml
ft/scripts/: build.sh
ft/src/: ft_core.rs  fungible_token.rs  lib.rs  storage.rs
src/: lib.rs  storage_impl.rs  token_receiver.rs
tests/: FT_test.rs  ft_test.rs  ft_test_wnear.rs  ft_wnear_imageboard_test.rs  test.rs
tests/common/: mod.rs
