[package]
name = "imageboard"
version = "0.1.0"
authors = ["MS"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
uint = {version = "0.9.0", default-features = false}
near-contract-standards = "4.0.0"
admin-controlled = { git = "https://github.com/near/rainbow-bridge", branch = "the-merge"}

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true


[dev-dependencies]
anyhow = "1.0"
borsh = "0.9"
maplit = "1.0"
near-units = "0.2.0"
workspaces =  {git = "https://github.com/near/workspaces-rs", tag = "0.6.0"}
serde = "1.0"
serde_with = "2"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
rand = "0.5.0"
